Made fixed footer responsive. Not absolutely position on small viewports

--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -62,15 +62,22 @@ body {
 	}
 
 	footer {
-		position:absolute;
-		bottom:0;
-		right:20px;
+		@media screen and (min-width: 600px) { 
+			position:absolute;
+			bottom:0;
+			right:20px;
+		}
 	}
 
 	footer p {
+
 		font-size: 1em;
-		text-align:right;
-		max-width:none;
+		text-align:left;
+
+		@media screen and (min-width: 600px) { 
+			text-align:right;
+			max-width:none;
+		}
 	}
 
 	#canvas { 
